--- a/develop/blocks/object-card/object-card.scss
+++ b/develop/blocks/object-card/object-card.scss
@@ -49,6 +49,24 @@
         }
     }
 
+    &__play {
+        position: absolute;
+        z-index: 1;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        margin-left: 9px;
+
+        border-width: 18px 0 18px 36px;
+        border-color: #fed63f;
+        border-style: solid;
+        border-top-color: transparent;
+        border-bottom-color: transparent;
+
+        background-color: transparent;
+        outline: none;
+    }
+
     &__top {
         position: absolute;
         top: 15px;
@@ -190,6 +208,20 @@
         background-color: $theme-color;
         border-radius: 50%;
     }
+
+    &__lock {
+        position: relative;
+        display: block;
+        width: 16px;
+        height: 16px;
+        margin-left: -2px;
+
+        svg {
+            @include svg-icon;
+
+            fill: $theme-color;
+        }
+    }
 }
 
 @media #{$tablet} {
@@ -216,6 +248,12 @@
 @media #{$laptop} {
     .object-card {
         z-index: 1;
+
+        // &__play {
+        //     margin-left: 16px;
+
+        //     border-width: 35px 0 35px 70px;
+        // }
     }
 }
 
