--- a/develop/blocks/object-description/object-description.pug
+++ b/develop/blocks/object-description/object-description.pug
@@ -9,6 +9,10 @@ mixin object-description()
                     | Инвесторам предлагается профессионально отобранный объект недвижимости институционального качества формата стрит-ритейл. Объект расположен в новом жилом микрорайоне Эко Видное в Ленинском районе Московской области в 4 км от Москвы по высокоскоростной трассе М4 «Дон».
                 p 
                     | Удачное расположение делает объект привлекательным как для покупателей, так и для брендов продуктового ритейла. Операторы, предлагающие различные группы товаров, обеспечивают стабильный покупательский трафик. Количество посетителей в месяц - более 100 тысяч человек. В Торговом центре расположены продуктовые магазины, сети быстрого питания, кафе, студии красоты, товары для детей, зоомагазин, аптека и другие арендаторы.
+                ul
+                    li Lorem, ipsum.
+                    li Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, eveniet!
+                    li Lorem ipsum dolor sit amet consectetur adipisicing elit. A, maiores! Similique quis, modi provident commodi molestias eos voluptate error itaque ex, enim ut? Eaque, sit.
             +e.aside
                 p Объект является 1-этажным отдельно стоящим зданием с подвальными помещениями, пригодными для сдачи в аренду
                 +e.data
