--- a/develop/blocks/object-location/object-location.scss
+++ b/develop/blocks/object-location/object-location.scss
@@ -20,15 +20,50 @@
                 margin-bottom: 0;
             }
         }
+
+        ul {
+            padding: 0;
+            margin: 0 0 25px;
+            list-style: none;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+
+            li {
+                position: relative;
+                padding-left: 16px;
+                margin-bottom: 8px;
+
+                font-size: 16px;
+                line-height: 1.4;
+
+                &::before {
+                    content: '';
+                    position: absolute;
+                    width: 6px;
+                    height: 6px;
+                    top: 9px;
+                    left: 0;
+
+                    background-color: $theme-color;
+                    border-radius: 50%;
+                }
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        }
     }
 
     &__aside {
         p {
             margin: 0 0 25px;
-    
+
             font-size: 16px;
             line-height: 1.4;
-    
+
             &:last-child {
                 margin-bottom: 0;
             }
