--- a/develop/blocks/partners-choice/partners-choice.pug
+++ b/develop/blocks/partners-choice/partners-choice.pug
@@ -11,31 +11,31 @@ mixin partners-choice()
                     +e.target-text
                         p Cпециалисты по продаже недвижимости и инвестиционных продуктов
                         p Информационные партнеры и блогеры
-                        p Риэлторские агентства и брокерские дома
+                        p Риэлторские агентства, банки и брокерские дома
                 +e.options
                     +e.data.smi
                         +e.option-label Для СМИ и блогеров
                         +e.option-title Реферальный партнер
                         +e.option-text 
                             p Программа подойдет для партнеров, которые профессионально используют возможности социальных сетей, видеоблогов и информационных порталов.
-                            p Партнер получает доход от каждого клиента, прошедшего по реферальной ссылке и совершившего сделку. Консультацией и обслуживанием клиентов занимаются специалисты Aktivo.
+                            p Партнер получает доход от каждого клиента, прошедшего по реферальной ссылке и совершившего первую сделку. Консультацией и обслуживанием клиентов занимаются специалисты Aktivo.
                     +e.advantages.smi
-                        +e.advantage
-                            +e.advantage-label Заключение сделок
-                            +e.advantage-value Самостоятельно
-                        +e.advantage
-                            +e.advantage-label Сертификация
-                            +e.advantage-value Обучение
-                    +e.data.sales
-                        +e.option-label Для продавцов
-                        +e.option-title Сертифици­&shy;рованный ID партнер
-                        +e.option-text 
-                            p Программа подойдет для партнеров физических и юридических лиц, которые обладают собственной клиентской базой и готовы проводить полный цикл сделки самостоятельно.
-                            p Каждый партнер получает индивидуальный ID номер, который присваивается всем его клиентам.
-                    +e.advantages.sales
                         +e.advantage
                             +e.advantage-label Заключение сделок
                             +e.advantage-value Сделки заключает Aktivo
                         +e.advantage
                             +e.advantage-label Сертификация
                             +e.advantage-value Не требуется
+                    +e.data.sales
+                        +e.option-label Для продавцов
+                        +e.option-title Сертифици­&shy;рованный партнер
+                        +e.option-text 
+                            p Программа подойдет для партнеров физических и юридических лиц, которые обладают собственной клиентской базой и готовы проводить полный цикл сделки самостоятельно.
+                            p Aktivo на постоянной основе производит оценку компетенций по продаже и обслуживанию
+                    +e.advantages.sales
+                        +e.advantage
+                            +e.advantage-label Заключение сделок
+                            +e.advantage-value Самостоятельно
+                        +e.advantage
+                            +e.advantage-label Сертификация
+                            +e.advantage-value Необходима
