--- a/develop/blocks/partners-status/partners-status.pug
+++ b/develop/blocks/partners-status/partners-status.pug
@@ -6,12 +6,12 @@ mixin partners-status()
                     +title
                         | Получите<br>статус<br> партнера
                     +e.step 2
-                +e.P.text Мы предоставляем участникам программы эксклюзивное право предлагать наш продукт своим клиентам. Вы получите всю необходимую информацию и компетенции позволяющию начать зарабатывать привлекая инвестиции в коммерческую недвижимость
-                +e.id ID
+                +e.P.text Мы предоставляем участникам программы эксклюзивное право предлагать наш продукт своим клиентам. Вы получите всю необходимую информацию и компетенции позволяющие начать зарабатывать привлекая инвестиции в коммерческую недвижимость
+                +e.icon +
                 +e.actions
                     +e.action
-                        +e.action-title Знакомство с менеджментом 
-                        +e.action-text Предоставляем подробные инструкции и маркетинговые материалы. Поддерживаем партнеров на всех этапах продаж 
+                        +e.action-title Всесторонняя поддержка
+                        +e.action-text Предоставляем доступ на портал, где вы найдете маркетинговые и обучающие метриалы, контроль знаний в виде тестов, записи вебинаров, ответы на часто задаваемые вопросы
                     +e.action
                         +e.action-title Прозрачная система премирования  
-                        +e.action-text В рамках сотрудничества партнеры Aktivo получают вознаграждение за каждую сделку с клиентом, включая повторные
+                        +e.action-text В рамках сотрудничества партнеры Aktivo получают доступ к личному кабинету, где отображена статистика по переходам, регистрациям и сделкам
