--- a/develop/blocks/partners-status/partners-status.scss
+++ b/develop/blocks/partners-status/partners-status.scss
@@ -18,17 +18,17 @@
     }
 
     &__text {
-        margin: 0 0 60px;
+        margin: 0 0 45px;
 
         font-size: 16px;
         line-height: 1.4;
     }
 
-    &__id {
-        margin: 0 0 25px;
-        margin-left: -9px;
+    &__icon {
+        margin: 0 0 15px;
+        margin-left: -10px;
 
-        font-size: 100px;
+        font-size: 160px;
         font-weight: 600;
         color: $theme-color;
         line-height: 0.75;
@@ -65,7 +65,7 @@
         &__wrapper {
             display: grid;
             grid-template-areas:
-                '. title id'
+                '. title icon'
                 '. text actions';
             grid-template-columns: repeat(3, 33.33%);
             grid-template-rows: repeat(2, auto);
@@ -81,13 +81,11 @@
             display: none;
         }
 
-        &__id {
-            grid-area: id;
+        &__icon {
+            grid-area: icon;
             align-self: end;
             margin-bottom: 20px;
             padding-bottom: 5px;
-
-            font-size: 105px;
         }
 
         &__text {
@@ -111,7 +109,7 @@
         padding-top: 175px;
 
         &__wrapper {
-            grid-template-columns: 400px 400px 360px
+            grid-template-columns: 400px 400px 360px;
         }
 
         &__title {
@@ -122,9 +120,9 @@
             padding-right: 40px;
         }
 
-        &__id {
-            font-size: 195px;
-            margin-left: -18px;
+        &__icon {
+            font-size: 225px;
+            margin-left: -15px;
             margin-bottom: 40px;
         }
 
