--- a/develop/blocks/partners-top/partners-top.pug
+++ b/develop/blocks/partners-top/partners-top.pug
@@ -12,4 +12,4 @@ mixin partners-top()
                     +e.UL.steps
                         +e.LI.step Выберите вид партнерства и пройдите регистрацию
                         +e.LI.step Получите официальный статус партнера и сертификат
-                        +e.LI.step Получайте ежемесячный доход с привлеченных клиентов
+                        +e.LI.step Получайте доход с привлеченных клиентов
