--- a/develop/blocks/index-top/index-top.scss
+++ b/develop/blocks/index-top/index-top.scss
@@ -64,13 +64,13 @@
             padding-top: 100px;
             display: grid;
             grid-template-areas:
-                'title title advantages'
+                'slider title advantages'
                 'slider link advantages'
                 'slider . advantages';
             grid-template-columns: repeat(3, 33.33%);
             grid-template-rows: repeat(4, auto);
 
-            margin-bottom: -335px;
+            margin-bottom: -200px;
         }
 
         &__title {
@@ -108,7 +108,6 @@
             min-width: 300px;
             height: 560px;
             margin-right: 0;
-            top: -90px;
         }
     }
 }
@@ -141,7 +140,7 @@
     .index-top {
         &__wrapper {
             padding-top: 165px;
-            margin-bottom: -375px;
+            margin-bottom: -245px;
 
             grid-template-columns: 400px 360px 400px;
         }
@@ -149,7 +148,9 @@
         &__title {
             top: -15px;
 
-            font-size: 50px;
+            .title {
+                font-size: 40px;
+            }
         }
 
         &__advantages {
@@ -165,7 +166,7 @@
         }
 
         &__slider {
-            top: -135px;
+            top: -10px;
             height: 690px;
         }
     }
