--- a/develop/blocks/object-finances/object-finances.pug
+++ b/develop/blocks/object-finances/object-finances.pug
@@ -15,40 +15,42 @@ mixin object-finances()
                     td Декабрь 2017
                     td Январь 2018
                     td Февраль 2018
+                    td Март 2018
+                    td Апрель 2018
                     td &nbsp;
                 tr
                     th Доход
-                    each val in Array.from(new Array(7))
+                    each val in Array.from(new Array(9))
                         td 10 390 900.00 ₽
                     td
                         | &nbsp;
                 tr   
                     th Расход
-                    each val in Array.from(new Array(7))
+                    each val in Array.from(new Array(9))
                         td 0.00 ₽
                     td
                         | &nbsp;
                 tr   
                     th ЧОД
-                    each val in Array.from(new Array(7))
+                    each val in Array.from(new Array(9))
                         td 1 390 900.00 ₽
                     td
                         | &nbsp;
                 tr   
                     th Комиссия за управление
-                    each val in Array.from(new Array(7))
+                    each val in Array.from(new Array(9))
                         td 99.99 ₽
                     td
                         | &nbsp;
                 tr   
                     th Доход на распределение
-                    each val in Array.from(new Array(7))
+                    each val in Array.from(new Array(9))
                         td 12 290.99 ₽
                     td
                         | &nbsp;
                 tr   
                     th Доход на пай до НДФЛ
-                    each val in Array.from(new Array(7))
+                    each val in Array.from(new Array(9))
                         td 1 700.01 ₽
                     td
                         | &nbsp;
@@ -58,7 +60,7 @@ mixin object-finances()
             #lineChart
         +e.column-chart
             +e.subtitle
-                | Оборот паев
+                | Ликвидность
             #columnChart
         +e.scroll.--prev
             +e.BUTTON.scroll-prev
