--- a/develop/blocks/index-top/index-top.scss
+++ b/develop/blocks/index-top/index-top.scss
@@ -70,7 +70,7 @@
             grid-template-columns: repeat(3, 33.33%);
             grid-template-rows: repeat(4, auto);
 
-            margin-bottom: -200px;
+            margin-bottom: -100px;
         }
 
         &__title {
@@ -79,6 +79,8 @@
             z-index: 10;
             top: -5px;
             margin-bottom: 20px;
+            min-width: 290px;
+            justify-self: end;
 
             font-size: 32px;
             text-align: right;
@@ -108,6 +110,7 @@
             min-width: 300px;
             height: 560px;
             margin-right: 0;
+            margin-top: -100px;
         }
     }
 }
@@ -120,6 +123,10 @@
 
         &__title {
             top: -10px;
+
+            .title {
+                font-size: 32px;
+            }
         }
 
         &__advantages {
@@ -132,6 +139,10 @@
 
         &__link {
             width: 100%;
+        }
+
+        &__slider {
+            margin-top: -125px;
         }
     }
 }
@@ -167,6 +178,7 @@
 
         &__slider {
             top: -10px;
+            margin-top: -155px;
             height: 690px;
         }
     }
