--- a/develop/jade/main-page.pug
+++ b/develop/jade/main-page.pug
@@ -8,6 +8,7 @@ doctype html
 html(lang='ru')
     +doc-header
     body(theme='dark-theme')
+        +alert-banner
         +main-header
         .page
             +lines
