--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5579,28 +5579,26 @@ th {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis; }
-    .object-finances__table tr:first-child {
-      position: relative; }
-      .object-finances__table tr:first-child td {
-        padding-bottom: 20px;
-        font-weight: 600;
-        color: #9e9e9e; }
-      .object-finances__table tr:first-child td:first-child {
-        position: absolute;
-        width: 175px;
-        height: 60px;
-        padding-left: 0;
-        color: #000;
-        background-color: #fff; }
-        .object-finances__table tr:first-child td:first-child + td {
-          padding-left: 175px;
-          width: 305px; }
-      .object-finances__table tr:first-child .heading {
-        position: absolute;
-        bottom: 35px;
-        font-size: 18px;
-        font-weight: 600;
-        line-height: 1.2; }
+    .object-finances__table tr:first-child td {
+      padding-bottom: 20px;
+      font-weight: 600;
+      color: #9e9e9e; }
+    .object-finances__table tr:first-child td:first-child {
+      position: absolute;
+      width: 175px;
+      height: 60px;
+      padding-left: 0;
+      color: #000;
+      background-color: #fff; }
+      .object-finances__table tr:first-child td:first-child + td {
+        padding-left: 175px;
+        width: 305px; }
+    .object-finances__table tr:first-child .heading {
+      position: absolute;
+      bottom: 35px;
+      font-size: 18px;
+      font-weight: 600;
+      line-height: 1.2; }
     .object-finances__table th {
       height: 30px;
       background-color: #fff;
@@ -5638,17 +5636,19 @@ th {
     transition: opacity 300ms ease; }
     .object-finances__vr.active {
       opacity: 1; }
-  .object-finances__scroll {
+  .object-finances__scroll, .object-finances__jump {
     position: absolute;
     width: 20px;
     top: 150px;
     bottom: 50px;
     pointer-events: none; }
-    .object-finances__scroll--prev {
+    .object-finances__scroll--prev, .object-finances__jump--prev {
       left: -20px; }
-    .object-finances__scroll--next {
+    .object-finances__scroll--next, .object-finances__jump--next {
       right: -20px; }
-  .object-finances__scroll-next, .object-finances__scroll-prev {
+  .object-finances__jump {
+    top: 200px; }
+  .object-finances__scroll-next, .object-finances__scroll-prev, .object-finances__jump-next, .object-finances__jump-prev {
     padding: 0;
     margin: 0;
     background: none;
@@ -5671,10 +5671,10 @@ th {
     -webkit-transition: opacity 300ms ease;
     -moz-transition: opacity 300ms ease;
     transition: opacity 300ms ease; }
-    .object-finances__scroll-next.active, .object-finances__scroll-prev.active {
+    .object-finances__scroll-next.active, .object-finances__scroll-prev.active, .object-finances__jump-next.active, .object-finances__jump-prev.active {
       opacity: 1;
       pointer-events: all; }
-  .object-finances__scroll-prev {
+  .object-finances__scroll-prev, .object-finances__jump-prev {
     -webkit-transform: rotate(-225deg);
        -moz-transform: rotate(-225deg);
         -ms-transform: rotate(-225deg);
@@ -5682,6 +5682,20 @@ th {
     margin-left: 6px; }
   .object-finances__scroll-next {
     margin-left: -6px; }
+  .object-finances__jump-next {
+    margin-left: -3px; }
+  .object-finances__jump-prev, .object-finances__jump-next {
+    top: 100px; }
+    .object-finances__jump-prev::after, .object-finances__jump-next::after {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      top: -5px;
+      left: -5px;
+      border-width: 0 1px 1px 0;
+      border-style: solid;
+      border-color: #fed63f; }
   .object-finances__line-chart {
     position: relative;
     padding-top: 50px;
@@ -5718,46 +5732,55 @@ th {
     background-color: #fff; }
 
 @media (min-width: 1024px) {
-  .object-finances__table tr:first-child {
-    position: relative; }
-    .object-finances__table tr:first-child td:first-child {
-      position: absolute;
-      width: 265px; }
-      .object-finances__table tr:first-child td:first-child + td {
-        padding-left: 265px;
-        width: 415px; }
-    .object-finances__table tr:first-child .heading {
-      bottom: 30px;
-      font-size: 24px; }
+  .object-finances__table tr:first-child td:first-child {
+    width: 195px; }
+    .object-finances__table tr:first-child td:first-child + td {
+      padding-left: 195px;
+      width: 315px; }
+  .object-finances__table tr:first-child .heading {
+    bottom: 30px;
+    font-size: 24px; }
   .object-finances__table td {
-    width: 150px;
+    width: 120px;
     height: 40px;
+    padding-right: 5px;
     font-size: 14px;
     line-height: 40px; }
   .object-finances__table th {
-    width: 265px;
+    width: 195px;
     height: 40px;
     font-size: 14px;
     line-height: 40px; }
     .object-finances__table th + td {
-      padding-left: 265px;
-      width: 415px; }
-  .object-finances__scroll-next, .object-finances__scroll-prev {
+      padding-left: 195px;
+      width: 315px; }
+  .object-finances__jump {
+    top: 220px; }
+  .object-finances__scroll-next, .object-finances__scroll-prev, .object-finances__jump-next, .object-finances__jump-prev {
     width: 35px;
     height: 35px; }
+  .object-finances__jump-next, .object-finances__jump-prev {
+    top: 120px; }
+    .object-finances__jump-next::after, .object-finances__jump-prev::after {
+      width: 35px;
+      height: 35px; }
   .object-finances__scroll-prev {
     margin-left: 0; }
+  .object-finances__jump-prev {
+    margin-left: -6px; }
   .object-finances__scroll-next {
     margin-left: -15px; }
+  .object-finances__jump-next {
+    margin-left: -9px; }
   .object-finances__line-chart {
     position: relative;
     padding-top: 70px;
-    padding-left: 130px; }
+    padding-left: 75px; }
   .object-finances__column-chart {
     padding-top: 40px;
-    padding-left: 130px; }
+    padding-left: 75px; }
   .object-finances__subtitle {
-    width: 260px;
+    width: 180px;
     -webkit-box-align: start;
        -moz-box-align: start;
         -ms-flex-align: start;
@@ -5771,9 +5794,7 @@ th {
     padding-top: 55px;
     padding-bottom: 55px;
     margin-top: -55px;
-    margin-bottom: -55px; }
-    .object-finances__scroll-next {
-      margin-left: 0px; } }
+    margin-bottom: -55px; } }
 
 .object-location__title {
   margin-bottom: 16px; }
