new update for object-page

--- a/develop/blocks/object-card/object-card.pug
+++ b/develop/blocks/object-card/object-card.pug
@@ -44,6 +44,18 @@ mixin object-card(data)
                     td Мин. инвестиции:
                     td
                         span.value 353 694 ₽
+                tr
+                    td(colspan='2')
+                        span.value
+                            b ЗПИФН "Активо четырнадцать"
+                tr
+                    td Управляющая компания:
+                    td
+                        span.value КСП Капитал
+                tr
+                    td Депозитарная компания:
+                    td
+                        img(src="images/redesign/infinitum.png", alt="")
 
 
 
