--- a/develop/blocks/object-finances/object-finances.pug
+++ b/develop/blocks/object-finances/object-finances.pug
@@ -22,7 +22,7 @@ mixin object-finances()
                 tr
                     th Доход
                     each val in Array.from(new Array(12))
-                        td 10 390 900.00 ₽
+                        td 10 390 тыс. ₽
                     td
                         | &nbsp;
                 tr   
@@ -34,7 +34,7 @@ mixin object-finances()
                 tr   
                     th ЧОД
                     each val in Array.from(new Array(12))
-                        td 1 390 900.00 ₽
+                        td 139 тыс. ₽
                     td
                         | &nbsp;
                 tr   
