--- a/develop/blocks/object-calc/object-calc.pug
+++ b/develop/blocks/object-calc/object-calc.pug
@@ -16,12 +16,17 @@ mixin object-calc()
                     img(src='images/redesign/object-cards/object1.jpg', alt="")
                 +e.income-data(data-min='300000' data-max='18000000' data-liberty-step='85000' data-step='100000' data-initial='2000000')
                     +e.data-row
-                        +e.data-value.__income 0
+                        +e.data-value.__income
+                            span.value(contenteditable='true')  0
+                            span.suffix  ₽
                         +e.data-label Ежемесячный доход
                     +e.data-row
-                        +e.data-value.__share 0
+                        +e.data-value.__share
+                            span.value(contenteditable='true') 0
                         +e.data-label Приобретенных паев
                     +e.data-row
-                        +e.data-value.__rate(data-rate='12.8' data-liberty-rate='13.8') 12.8%
+                        +e.data-value.__rate(data-rate='12.8' data-liberty-rate='13.8') 
+                            span.value(contenteditable='true') 12.8
+                            span.suffix %
                         +e.data-label Доходность
                     +e.BUTTON.button.btn(type='button') Оставить заявку
