--- a/develop/blocks/object-calc/object-calc.scss
+++ b/develop/blocks/object-calc/object-calc.scss
@@ -165,6 +165,8 @@
         left: 0;
         top: 0;
 
+        pointer-events: none;
+
         img {
             display: block;
             width: 100%;
@@ -193,7 +195,7 @@
         z-index: 2;
 
         color: $text-color-white;
-        pointer-events: none;
+        // pointer-events: none;
     }
 
     &__data-row {
