--- a/develop/blocks/object-finances/object-finances.scss
+++ b/develop/blocks/object-finances/object-finances.scss
@@ -249,12 +249,18 @@
         &__table {
             tr:first-child {
                 td:first-child {
-                    width: 195px;
+                    width: 180px;
 
+                    
                     + td {
-                        padding-left: 195px;
-                        width: 315px;
+                        padding-left: 180px;
+                        width: 300px;
+                        text-align: center;
                     }
+                }
+
+                td {
+                    text-align: center;
                 }
 
                 .heading {
@@ -271,18 +277,19 @@
 
                 font-size: 14px;
                 line-height: 40px;
+                text-align: right;
             }
 
             th {
-                width: 195px;
+                width: 180px;
                 height: 40px;
 
                 font-size: 14px;
                 line-height: 40px;
 
                 + td {
-                    padding-left: 195px;
-                    width: 315px;
+                    padding-left: 180px;
+                    width: 300px;
                 }
             }
         }
@@ -345,6 +352,7 @@
 
         &__vr {
             bottom: 70px;
+            margin-left: 15px;
         }
     }
 }
