--- a/develop/blocks/object-finances/object-finances.scss
+++ b/develop/blocks/object-finances/object-finances.scss
@@ -249,18 +249,18 @@
         &__table {
             tr:first-child {
                 td:first-child {
-                    width: 180px;
+                    width: 188px;
 
-                    
                     + td {
-                        padding-left: 180px;
-                        width: 300px;
+                        padding-left: 188px;
+                        width: 313px;
                         text-align: center;
                     }
                 }
 
                 td {
-                    text-align: center;
+                    text-align: right;
+                    font-size: 15px;
                 }
 
                 .heading {
@@ -271,9 +271,10 @@
             }
 
             td {
-                width: 120px;
+                width: 126px;
                 height: 40px;
-                padding-right: 5px;
+                padding-left: 5px;
+                padding-right: 0;
 
                 font-size: 14px;
                 line-height: 40px;
@@ -281,15 +282,15 @@
             }
 
             th {
-                width: 180px;
+                width: 188px;
                 height: 40px;
 
                 font-size: 14px;
                 line-height: 40px;
 
                 + td {
-                    padding-left: 180px;
-                    width: 300px;
+                    padding-left: 188px;
+                    width: 313px;
                 }
             }
         }
@@ -335,12 +336,12 @@
         &__line-chart {
             position: relative;
             padding-top: 70px;
-            padding-left: 75px;
+            padding-left: 80px;
         }
 
         &__column-chart {
             padding-top: 40px;
-            padding-left: 75px;
+            padding-left: 80px;
         }
 
         &__subtitle {
@@ -352,7 +353,7 @@
 
         &__vr {
             bottom: 70px;
-            margin-left: 15px;
+            // margin-left: 15px;
         }
     }
 }
