--- a/develop/blocks/object-calc/object-calc.pug
+++ b/develop/blocks/object-calc/object-calc.pug
@@ -14,7 +14,7 @@ mixin object-calc()
                 //- +e.income-range
                 +e.image
                     img(src='images/redesign/object-cards/object1.jpg', alt="")
-                +e.income-data(data-min='300000' data-max='18000000' data-liberty-step='85000' data-step='100000' data-initial='2000000')
+                +e.income-data(data-min='300000' data-max='18000000' data-liberty-step='85000' data-step='100000' data-initial='2000000' data-rate='12.8')
                     +e.data-row
                         +e.data-value.__income
                             span.value(contenteditable='true')  0
@@ -27,9 +27,10 @@ mixin object-calc()
                     +e.data-row
                         +e.data-value.__step
                             span.value(contenteditable='true') 0
+                            span.suffix  ₽
                         +e.data-label Стоимость пая
                     +e.data-row
-                        +e.data-value.__rate(data-rate='12.8' data-liberty-rate='13.8') 
+                        +e.data-value.__rate 
                             span.value(contenteditable='true') 12.8
                             span.suffix %
                         +e.data-label Доходность
