small new object-page updates

--- a/develop/blocks/object-calc/object-calc.pug
+++ b/develop/blocks/object-calc/object-calc.pug
@@ -23,6 +23,7 @@ mixin object-calc()
                     +e.data-row
                         +e.data-value.__share
                             span.value(contenteditable='true') 0
+                            span.suffix &nbsp;
                         +e.data-label Приобретенных паев
                     +e.data-row
                         +e.data-value.__step
