--- a/develop/blocks/object-finances/object-finances.pug
+++ b/develop/blocks/object-finances/object-finances.pug
@@ -18,43 +18,53 @@ mixin object-finances()
                     td Март 2018
                     td Апрель 2018
                     td Май 2018
-                    td &nbsp;
+                    td Август 2017
+                    td Сентябрь 2017
+                    td Октябрь 2017
+                    td Ноябрь 2017
+                    td Декабрь 2017
+                    td Январь 2018
+                    td Февраль 2018
+                    td Март 2018
+                    td Апрель 2018
+                    td Май 2018
+                    //- td &nbsp;
                 tr
                     th Доход
-                    each val in Array.from(new Array(12))
+                    each val in Array.from(new Array(20))
                         td 10 390 тыс. ₽
-                    td
-                        | &nbsp;
+                    //- td
+                        //- | &nbsp;
                 tr   
                     th Расход
-                    each val in Array.from(new Array(12))
+                    each val in Array.from(new Array(20))
                         td 0.00 ₽
-                    td
-                        | &nbsp;
+                    //- td
+                        //- | &nbsp;
                 tr   
                     th ЧОД
-                    each val in Array.from(new Array(12))
+                    each val in Array.from(new Array(20))
                         td 139 тыс. ₽
-                    td
-                        | &nbsp;
+                    //- td
+                        //- | &nbsp;
                 tr   
                     th Комиссия за управление
-                    each val in Array.from(new Array(12))
+                    each val in Array.from(new Array(20))
                         td 99.99 ₽
-                    td
-                        | &nbsp;
+                    //- td
+                        //- | &nbsp;
                 tr   
                     th Доход на распределение
-                    each val in Array.from(new Array(12))
+                    each val in Array.from(new Array(20))
                         td 12 290.99 ₽
-                    td
-                        | &nbsp;
+                    //- td
+                        //- | &nbsp;
                 tr   
                     th Доход на пай до НДФЛ
-                    each val in Array.from(new Array(12))
+                    each val in Array.from(new Array(20))
                         td 1 700.01 ₽
-                    td
-                        | &nbsp;
+                    //- td
+                        //- | &nbsp;
         +e.line-chart
             +e.subtitle
                 | Финансовые выплаты
